force-app/main/default/objects/Test_Coverage_Snapshot__c/Test_Coverage_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Test Coverage Snapshot</label>
    <nameField>
        <displayFormat>COV-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Coverage Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>