force-app/main/default/objects/Test_Coverage_Snapshot__c/fields/Apex_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Apex_Coverage__c</fullName>
    <label>Apex Coverage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>