force-app/main/default/objects/Test_Coverage_Snapshot__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <formula>IF(Total_Metadata_Items__c &gt; 0, Tested_Metadata_Items__c / Total_Metadata_Items__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>