force-app/main/default/objects/Test_Coverage_Snapshot__c/fields/Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Test_Suite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Suite</label>
    <referenceTo>Regression_Test_Suite__c</referenceTo>
    <relationshipLabel>Coverage Snapshots</relationshipLabel>
    <relationshipName>Coverage_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>