force-app/main/default/objects/Test_Coverage_Snapshot__c/fields/Total_Metadata_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Metadata_Items__c</fullName>
    <label>Total Metadata Items</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>