force-app/main/default/objects/Test_Coverage_Snapshot__c/listViews/Low_Coverage_Snapshots.listView-meta.xml
<ListView>
    <fullName>Low_Coverage_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>Test_Suite__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Apex_Coverage__c</columns>
    <columns>Flow_Coverage__c</columns>
    <columns>VR_Coverage__c</columns>
    <columns>Overall_Score__c</columns>
    <columns>Total_Metadata_Items__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Overall_Score__c</field>
        <operation>lessThan</operation>
        <value>75</value>
    </filters>
    <label>Low Coverage Snapshots (&lt;75%)</label>
</ListView>