force-app/main/default/objects/Test_Coverage_Snapshot__c/listViews/Recent_Snapshots.listView-meta.xml
<ListView>
    <fullName>Recent_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>Test_Suite__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Apex_Coverage__c</columns>
    <columns>Flow_Coverage__c</columns>
    <columns>VR_Coverage__c</columns>
    <columns>Overall_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Snapshot_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Snapshots (Last 30 Days)</label>
</ListView>